# spending-app-telegram-bot

./: .gitignore  Dockerfile  README.md  alembic.ini  bot.py  config.py  constants.py  db.py  docker-compose.yml  models.py  pyproject.toml
handlers/: add.py  add_spending.py  category.py  common.py  currency.py  export.py  export_csv.py  import_.py  import_csv.py  list.py  main_currency.py  month.py  non_command.py  remove.py  report.py  search.py  settings.py  spending.py  start.py  total.py
handlers/settings/: __init__.py  category.py  currency.py  custom_input.py  data_deletion.py  menu.py  utils.py
migrations/: env.py
migrations/versions/: 2025_04_19_1949-620ba9b3eac6_create_initial_tables.py  2025_04_19_1952-1_baseline.py
utils/: category_utils.py  currency_utils.py  date_utils.py  exchange.py  logging.py  pagination.py  plotting.py  spending_actions.py  ui_helpers.py  user_utils.py  validation.py
